= Changes log for the Taverna-Galaxy Gem

== Version 0.3.3
* Multiline output examples are now displayed better in HTML/Galaxy (similar to inputs)
* Updated wkf 74 test


== Version 0.3.2
* Automatic filename creation is more robust (all special chars are removed)
* More workflow tests


== Version 0.3.1
* Used semver formally (taged: v0.3.1 semver)
* For safety default wkf title substitutes ' ' with '_'
* Extended workflow tests


== Version 0.3.0
* Updated to newer myexperiment-rest lib (0.3.0).
* Restructured, now more modular and extensible.


== Version 0.2.9
* Fixed minor bug when workflow had empty description
* Added instructions to generated scripts on how to run them without Galaxy.


== Version 0.2.8
* Clean up of documentation
* Added rubyzip dependency to gemspec


== Version 0.2.7
* A Galaxy tool can now also be created by providing a t2flow file with the --t2flow flag.
